# Inex

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  SECURITY.md  findings.md  progress.md  task_plan.md
.agent/: init_plan.md
.github/workflows/: ci.yml  package.yml
crates/inex-cli/: Cargo.toml
crates/inex-cli/src/: args.rs  import.rs  lib.rs  main.rs  password.rs  query.rs  repository_import.rs  verify.rs
crates/inex-cli/tests/: export_cli.rs  git_cli.rs  import_cli.rs  kdf_calibration_info.rs  password_cli.rs  repository_import_cli.rs  runtime_info.rs
crates/inex-core/: Cargo.toml
crates/inex-core/src/: atomic.rs  crypto.rs  features.rs  format.rs  lib.rs  path.rs  plaintext_export.rs  publication.rs  search.rs  sodium.rs  tree.rs  umbra_config.rs  umbra_document.rs  umbra_keyslot.rs  umbra_render.rs  vault.rs  vault_config.rs
crates/inex-daemon/: Cargo.toml
crates/inex-daemon/src/: framing.rs  handler.rs  lib.rs  params.rs  protocol.rs  sensitive.rs  server.rs  session.rs
crates/inex-daemon/tests/: runtime_info.rs  stdio_process.rs
crates/inex-git/: Cargo.toml
crates/inex-git/src/: candidate_bundle_v5.rs  lib.rs  raw_index.rs  repository_import.rs  v5_force_kill_tests.rs
crates/inex-git/src/repository_import/: candidate_control.rs  candidate_fresh_audit.rs  candidate_git.rs  candidate_initial_authority.rs  candidate_manifest.rs  candidate_publication_authority.rs  candidate_seal.rs  candidate_transaction.rs  candidate_vault_authority.rs  candidate_worktree.rs
crates/inex-git/src/repository_import/candidate_git/: runtime_object_proof.rs
crates/inex-git/src/repository_import/candidate_seal/: aggregate.rs
docs/: PRD.md  acceptance-matrix.md  architecture.md  dependencies.md  editor-security.md  installation.md  operations-and-recovery.md  prd-umbra-mode.md  release-checklist.md  release-notes-0.1.0-pre-alpha.md  troubleshooting.md  user-guide.md  vscode-persistent-profile-validation.md
docs/spec/: edry-v1.md  git-merge-v1.md  import-repository-v1.md  import-v1.md  json-rpc-v1.md  opaque-assets-v1.md  plaintext-export-v1.md  umbra-v1.md  vault-v1.md  vscode-revision-compare-v1.md  vscode-working-tree-compare-v1.md
editors/neovim/: README.md
editors/neovim/lua/inex/: init.lua  rpc.lua
editors/neovim/plugin/: inex.lua
editors/neovim/tests/: annotation_picker.lua  headless_smoke.lua  outer_lifecycle.lua  run_outer_lifecycle.sh
editors/sublime/: Default (Linux).sublime-keymap  Inex.py  Inex.sublime-settings  Main.sublime-commands  README.md  inex_annotation.py  inex_core.py  inex_markdown.py  inex_password.py  inex_rpc.py
editors/sublime/test/build4200/: InexQA.py  README.md  run_build4200.py
editors/sublime/tests/: __init__.py  cross_editor_catalog.py  test_annotation.py  test_build4200_runner.py  test_core.py  test_markdown.py  test_password.py  test_python38_syntax.py  test_rpc.py
editors/vscode/: .vscodeignore  README.md  esbuild.integration.mjs  esbuild.mjs  package.json  pnpm-lock.yaml  tsconfig.json
editors/vscode/src/: assetPreview.test.ts  assetPreview.ts  assetPreviewCoordinator.ts  boundedFile.test.ts  boundedFile.ts  cliExecutable.ts  controller.ts  crud.ts  customEditor.ts  editorPresentation.test.ts  editorPresentation.ts  extension.ts  importCompletion.test.ts  importCompletion.ts  logicalPath.test.ts  logicalPath.ts  markdown.test.ts  markdown.ts  onboarding.test.ts  plaintextExport.test.ts  plaintextExport.ts  privateAnnotation.test.ts  privateAnnotation.ts  privateAnnotationPicker.ts  privateAnnotationPreferences.test.ts  privateAnnotationPreferences.ts  processTask.test.ts  processTask.ts  repositoryImport.test.ts  repositoryImport.ts  repositoryImportPaths.ts  revisionCompare.test.ts  revisionCompare.ts  rpc.test.ts  rpc.ts  securityStatus.test.ts  securityStatus.ts  sensitiveUi.ts  sidecar.test.ts  sidecar.ts  (+7 more)
editors/vscode/src/integration/: suite.ts
editors/vscode/test/: residueScanner.mjs  residueScanner.test.mjs  runIntegration.mjs  sidecarTraceProxy.mjs
fixtures/: README.md
fixtures/v1-fixed/: document.md.enc.b64  expected.json  vault.json  vector.json
packaging/: dependency-license-policy.json
packaging/vsce/: package.json  pnpm-lock.yaml
scripts/: audit_native_dependencies.py  audit_release_artifacts.py  drill_kdf_calibration.py  drill_release_lifecycle.py  fetch_libsodium_dist.py  package_release.py  release_common.py  smoke_release_artifacts.py  verify_release_tag.py
scripts/tests/: test_drill_kdf_calibration.py  test_fetch_libsodium_dist.py  test_release_artifacts.py  test_release_lifecycle.py
