[workspace]
members = [
    "crates/inex-cli",
    "crates/inex-core",
    "crates/inex-daemon",
    "crates/inex-git",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "GPL-3.0-only"
repository = "https://github.com/JekYUlll/Inex"

[workspace.dependencies]
base64 = "0.22.1"
diffy = "=0.5.0"
libsodium-sys-stable = { version = "=1.24.0", default-features = false }
minicbor = { version = "=2.2.2", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
unicode-normalization = "=0.1.25"
uuid = { version = "1", features = ["serde", "v4"] }
windows-sys = "=0.61.2"
zeroize = { version = "=1.9.0", features = ["derive"] }

[workspace.lints.rust]
missing_debug_implementations = "warn"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
