[package]
name = "inex-cli"
description = "Administrative, import, verification, and Git tooling for Inex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "inex"
path = "src/main.rs"

[dependencies]
inex-core = { path = "../inex-core" }
inex-daemon = { path = "../inex-daemon" }
inex-git = { path = "../inex-git" }
rpassword = "=7.5.4"
sha2.workspace = true
serde_json.workspace = true
uuid.workspace = true
zeroize.workspace = true

[lints]
workspace = true
