[package]
name = "inex-core"
description = "Storage, cryptography, and vault primitives for Inex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
libsodium-sys-stable.workspace = true
minicbor.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true
zeroize.workspace = true

[lints]
workspace = true
