[package]
name = "inex-git"
description = "Ciphertext-only Git installation, merge, and recovery tooling for Inex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
diffy.workspace = true
inex-core = { path = "../inex-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[lints]
workspace = true
